@@ -865,13 +865,13 @@ class IIntrospector(Interface):
         discriminator (or discriminator hash) ``discriminator``.  If it does
         not exist in the introspector, return the value of ``default`` """
 
-    def get_category(category_name, sort_fn=None):
+    def get_category(category_name, sort_key=None):
         """ Get a sequence of dictionaries in the form
         ``[{'introspectable':IIntrospectable, 'related':[sequence of related
         IIntrospectables]}, ...]`` where each introspectable is part of the
-        category associated with ``category_name`` .  If ``sort_fn`` is
+        category associated with ``category_name`` .  If ``sort_key`` is
         ``None``, the sequence will be returned in the order the
-        introspectables were added to the introspector.  Otherwise, sort_fn
+        introspectables were added to the introspector.  Otherwise, sort_key
         should be a function that accepts an IIntrospectable and returns a
         value from it (ala the ``key`` function of Python's ``sorted``
         callable)."""
@@ -880,13 +880,13 @@ class IIntrospector(Interface):
         """ Return a sorted sequence of category names known by
          this introspector """
 
-    def categorized(sort_fn=None):
+    def categorized(sort_key=None):
         """ Get a sequence of tuples in the form ``[(category_name,
         [{'introspectable':IIntrospectable, 'related':[sequence of related
         IIntrospectables]}, ...])]`` representing all known
-        introspectables.  If ``sort_fn`` is ``None``, each introspectables
+        introspectables.  If ``sort_key`` is ``None``, each introspectables
         sequence will be returned in the order the introspectables were added
-        to the introspector.  Otherwise, sort_fn should be a function that
+        to the introspector.  Otherwise, sort_key should be a function that
         accepts an IIntrospectable and returns a value from it (ala the
         ``key`` function of Python's ``sorted`` callable)."""
 
@@ -941,7 +941,8 @@ class IIntrospectable(Interface):
     """ An introspectable object used for configuration introspection.  In
     addition to the methods below, objects which implement this interface
     must also implement all the methods of Python's
-    ``collections.MutableMapping`` (the "dictionary interface")."""
+    ``collections.MutableMapping`` (the "dictionary interface"), and must be
+    hashable."""
 
     title = Attribute('Text title describing this introspectable')
     type_name = Attribute('Text type name describing this introspectable')
@@ -985,6 +986,14 @@ class IIntrospectable(Interface):
                     method = getattr(introspector, methodname)
                     method((i.category_name, i.discriminator),
                            (category_name, discriminator))
+        """
+
+    def __hash__():
+
+        """ Introspectables must be hashable.  The typical implementation of
+        an introsepectable's __hash__ is::
+
+          return hash((self.category_name,) + (self.discriminator,))
         """
 
 # configuration phases: a lower phase number means the actions associated
